--- a/LinkerPlayer/Themes/Gray.xaml
+++ b/LinkerPlayer/Themes/Gray.xaml
@@ -1,56 +1,54 @@
-﻿<ResourceDictionary 
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Color x:Key="PlayerButtonBorderColor">#a0a0a0</Color>
-    <Color x:Key="PlayerButtonBorderDark">DarkGray</Color>
-    <Color x:Key="PlayerButtonGradientStartColor">#DDDDDD</Color>
-    <Color x:Key="PlayerButtonGradientEndColor">#FFFFFF</Color>
-    <Color x:Key="PlayerButtonPressedGradientStart">#B0B0B0</Color>
-    <Color x:Key="PlayerButtonPressedGradientStop">#C0C0C0</Color>
-    <Color x:Key="PlayerButtonMouseOverBorderColor">SteelBlue</Color>
-    <Color x:Key="PlayerButtonMouseOverBackground">Gray</Color>
-
-    <Color x:Key="DefaultItemForeground">#000000</Color>
-    <Color x:Key="MenuTextBrushForeground">#000000</Color>
-    <Color x:Key="MenuDisabledTextForeGround">#808080</Color>
-    <Color x:Key="FirstColorBrush">SteelBlue</Color>
-    <Color x:Key="FirstColorLightBrush">LightSteelBlue</Color>
-    <Color x:Key="PrimaryBackgroundBrush">#FAFAFA</Color>
-    <Color x:Key="SecondBackgroundBrush">#F0F0F0</Color>
+    <Color x:Key="FirstDarkColor">SteelBlue</Color>
+    <Color x:Key="FirstLightColor">LightSteelBlue</Color>
+    <Color x:Key="FirstBackgroundColor">#FAFAFA</Color>
+    <Color x:Key="PrimaryBackgroundColor">#FAFAFA</Color>
+    <Color x:Key="SecondBackgroundColor">#F0F0F0</Color>
     <Color x:Key="StandardTextForeground">#4000000</Color>
+    <Color x:Key="InactiveSelectionColor">WhiteSmoke</Color>
 
-    <Color x:Key="ListViewItemBackgroundBrush">#FAFAFA</Color>
-    <Color x:Key="ListViewItemForegroundBrush">#000000</Color>
-    <Color x:Key="FirstBackgroundBrush">#FAFAFA</Color>
-    <Color x:Key="PlaylistBackgroundBrush">#FFFFFF</Color>
-    <Color x:Key="PlaylistItemBackgroundBrush">#FFFFFF</Color>
-    
-    <Color x:Key="ImageBackgroundColor">White</Color>
-    <Color x:Key="MenuColor">WhiteSmoke</Color>
-    <Color x:Key="MenuTextColor">Gray</Color>
     <Color x:Key="GridAlternateColor">WhiteSmoke</Color>
     <Color x:Key="GridSelectionColor">#CBE8F6</Color>
-    <Color x:Key="PlaylistInsertColor">#6B7B82</Color>
     <Color x:Key="GridSelectionTextColor">Black</Color>
-    <Color x:Key="MenuHoverColor">LightSteelBlue</Color>
-    <Color x:Key="MenuSelectionColor">Black</Color>
 
+    <Color x:Key="ListItemForegroundColor">#000000</Color>
+    <Color x:Key="ListViewItemBackgroundColor">#FAFAFA</Color>
+    <Color x:Key="ListViewItemForegroundColor">#000000</Color>
+
+    <Color x:Key="PlaylistBackgroundColor">#FFFFFF</Color>
+    <Color x:Key="PlaylistItemBackgroundColor">#FFFFFF</Color>
+    <Color x:Key="PlaylistInsertColor">#6B7B82</Color>
+    <Color x:Key="PlayListTipBackgroundColor">#545C63</Color>
+    <Color x:Key="PlayListTipForegroundColor">#D0D0D0</Color>
+
+    <Color x:Key="PlayStartGradientColor">#D0D0D0</Color>
+    <Color x:Key="PlayEndGradientColor">#EAEAEA</Color>
     <Color x:Key="PlayerInactiveColor">Gray</Color>
     <Color x:Key="PlayerActiveColor">DarkGray</Color>
 
+    <Color x:Key="PlayerButtonBorderColor">#a0a0a0</Color>
+    <Color x:Key="PlayerButtonBorderDarkColor">DarkGray</Color>
+    <Color x:Key="PlayerButtonGradientStartColor">#DDDDDD</Color>
+    <Color x:Key="PlayerButtonGradientEndColor">#FFFFFF</Color>
+    <Color x:Key="PlayerButtonPressedGradientStartColor">#B0B0B0</Color>
+    <Color x:Key="PlayerButtonPressedGradientStopColor">#C0C0C0</Color>
+    <Color x:Key="PlayerButtonMouseOverBorderColor">SteelBlue</Color>
+    <Color x:Key="PlayerButtonMouseOverBackgroundColor">Gray</Color>
+
+    <Color x:Key="MenuTextForegroundColor">#000000</Color>
+    <Color x:Key="MenuDisabledTextColor">#808080</Color>
+    <Color x:Key="MenuColor">WhiteSmoke</Color>
+    <Color x:Key="MenuTextColor">Gray</Color>
+    <Color x:Key="MenuHoverColor">LightSteelBlue</Color>
+    <Color x:Key="MenuSelectionColor">Black</Color>
     <Color x:Key="MenuHighlightColor">#606060</Color>
 
-    <Color x:Key="InactiveSelectionColor">WhiteSmoke</Color>
+    <Color x:Key="ImageBackgroundColor">White</Color>
 
-    <Color x:Key="PlayerStartColor">#D0D0D0</Color>
-    <Color x:Key="PlayerEndColor">#EAEAEA</Color>
-    <Color x:Key="SpectrumColor">#DDDDDD</Color>
-
+    <Color x:Key="SpectrumBackgroundColor">#DDDDDD</Color>
     <Color x:Key="SpectrumStartColor">Steelblue</Color>
     <Color x:Key="SpectrumEndColor">Yellow</Color>
     <Color x:Key="SpectrumLineColor">LightSteelBlue</Color>
 
-    <Color x:Key="PlayListTipColor">#545C63</Color>
-    <Color x:Key="PlayListTipTextColor">#D0D0D0</Color>
 </ResourceDictionary>
