--- a/LinkerPlayer/Windows/SettingsWindow.xaml
+++ b/LinkerPlayer/Windows/SettingsWindow.xaml
@@ -26,24 +26,24 @@
 
     <Window.Resources>
         <Style x:Key="NoStylingButton" TargetType="{x:Type Button}">
-            <!--<Setter Property="Template">
+            <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
-                        --><!--<Border
+                        <Border
                             x:Name="border"
                             Background="Transparent"
                             CornerRadius="10">
                             <ContentPresenter />
-                        </Border>-->
+                        </Border>
 
-                        <!--<ControlTemplate.Triggers>
+                        <ControlTemplate.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
                                 <Setter TargetName="border" Property="Background" Value="#3b3b42" />
                             </Trigger>
-                        </ControlTemplate.Triggers>--><!--
+                        </ControlTemplate.Triggers>
                     </ControlTemplate>
                 </Setter.Value>
-            </Setter>-->
+            </Setter>
 
         </Style>
     </Window.Resources>
@@ -55,9 +55,9 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <!--<Grid.Background>
-            <SolidColorBrush Color="#212128" />
-        </Grid.Background>-->
+        <Grid.Background>
+            <SolidColorBrush Color="{DynamicResource FirstBackgroundColor}" />
+        </Grid.Background>
 
         <userControls:TitlebarButtons x:Name="TitlebarButtons" Panel.ZIndex="1" />
 
@@ -65,14 +65,14 @@
             <TabControl.Resources>
                 <Style TargetType="TextBlock">
                     <!--<Setter Property="FontFamily" Value="/Fonts/#Montserrat" />-->
-                    <!--<Setter Property="FontSize" Value="16" />-->
-                    <!--<Setter Property="Foreground" Value="#BDBDBD" />-->
+                    <Setter Property="FontSize" Value="16" />
+                    <Setter Property="Foreground" Value="#BDBDBD" />
                     <Setter Property="VerticalAlignment" Value="Center" />
                 </Style>
 
                 <Style TargetType="ComboBox">
-                    <!--<Setter Property="FontFamily" Value="/Fonts/#Montserrat" />-->
-                    <!--<Setter Property="FontSize" Value="16" />-->
+                    <Setter Property="FontFamily" Value="/Fonts/#Montserrat" />
+                    <Setter Property="FontSize" Value="16" />
                     <Setter Property="VerticalAlignment" Value="Center" />
                     <Setter Property="Height" Value="27" />
                 </Style>
