--- a/LinkerPlayer/Themes/BlackSmooth.xaml
+++ b/LinkerPlayer/Themes/BlackSmooth.xaml
@@ -1,5 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <Color x:Key="TitleBarForegroundColor">#B2CBDB</Color>
+    <Color x:Key="TitleBarBackgroundColor">#597080</Color>
+
     <Color x:Key="FirstDarkColor">Gray</Color>
     <Color x:Key="FirstLightColor">Gray</Color>
     <Color x:Key="FirstBackgroundColor">#1A1A1A</Color>
