--- a/LinkerPlayer/Themes/Dark.xaml
+++ b/LinkerPlayer/Themes/Dark.xaml
@@ -1,5 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <Color x:Key="TitleBarForegroundColor">#B2CBDB</Color>
+    <Color x:Key="TitleBarBackgroundColor">#597080</Color>
+
     <Color x:Key="FirstDarkColor">LightSteelBlue</Color>
     <Color x:Key="FirstLightColor">LightSteelBlue</Color>
     <Color x:Key="FirstBackgroundColor">#555555</Color>
