--- a/LinkerPlayer/Themes/Light.xaml
+++ b/LinkerPlayer/Themes/Light.xaml
@@ -1,11 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <Color x:Key="TitleBarForegroundColor">#B2CBDB</Color>
+    <Color x:Key="TitleBarBackgroundColor">#597080</Color>
+
     <Color x:Key="FirstDarkColor">SteelBlue</Color>
     <Color x:Key="FirstLightColor">LightSteelBlue</Color>
     <Color x:Key="FirstBackgroundColor">White</Color>
     <Color x:Key="PrimaryBackgroundColor">White</Color>
     <Color x:Key="SecondBackgroundColor">White</Color>
-    <Color x:Key="StandardTextForegroundColor">#4682B4</Color>
+    <Color x:Key="StandardTextForegroundColor">SteelBlue</Color>
     <Color x:Key="InactiveSelectionColor">WhiteSmoke</Color>
 
     <Color x:Key="GridAlternateColor">WhiteSmoke</Color>
@@ -47,7 +50,7 @@
     <Color x:Key="ImageBackgroundColor">White</Color>
 
     <Color x:Key="SpectrumBackgroundColor">#FFFFFF</Color>
-    <Color x:Key="SpectrumStartColor">Steelblue</Color>
+    <Color x:Key="SpectrumStartColor">SteelBlue</Color>
     <Color x:Key="SpectrumEndColor">Yellow</Color>
     <Color x:Key="SpectrumLineColor">LightSteelBlue</Color>
 
