--- a/LinkerPlayer/UserControls/PlayerControls.xaml
+++ b/LinkerPlayer/UserControls/PlayerControls.xaml
@@ -70,7 +70,7 @@
         </Style>
     </UserControl.Resources>
     <Grid>
-        <Border Background="#212121" />
+        <Border Background="{DynamicResource PlayerEndGradientBrush}" />
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="200" />
